--- a/backend/auth/gqlgen.yml
+++ b/backend/auth/gqlgen.yml
@@ -21,11 +21,11 @@ model:
   package: model
 
 # Where should the resolver implementations go?
-resolver:
-  layout: follow-schema
-  dir: graph
-  package: graph
-  filename_template: "{name}.resolvers.go"
+#resolver:
+ # layout: single-file
+ # dir: graph
+ # package: graph
+ # filename: graph/resolvers.go
   # Optional: turn on to not generate template comments above resolvers
   # omit_template_comment: false
 
@@ -49,13 +49,13 @@ resolver:
 
 # Optional: turn off to make struct-type struct fields not use pointers
 # e.g. type Thing struct { FieldA OtherThing } instead of { FieldA *OtherThing }
-# struct_fields_always_pointers: true
+struct_fields_always_pointers: false
 
 # Optional: turn off to make resolvers return values instead of pointers for structs
-# resolvers_always_return_pointers: true
+resolvers_always_return_pointers: false
 
 # Optional: turn on to return pointers instead of values in unmarshalInput
-# return_pointers_in_unmarshalinput: false
+return_pointers_in_unmarshalinput: false
 
 # Optional: wrap nullable input fields with Omittable
 # nullable_input_omittable: true
@@ -71,27 +71,28 @@ resolver:
 #
 # This enables argumment directives to not just mutate
 # argument values but to set them even if they're null.
-call_argument_directives_with_null: true
+#call_argument_directives_with_null: true
 
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
-autobind:
-#  - "subModuloAuth/graph/model"
+#autobind:
+#  - "ModuloAuth/graph/model"
 
 # This section declares type mapping between the GraphQL and go type systems
 #
-# The first line in each type will be used as defaults for resolver arguments and
+# The first line in each type will be used as defafults for resolver arguments and
 # modelgen, the others will be allowed when binding to fields. Configure them to
 # your liking
 models:
   ID:
     model:
       - github.com/99designs/gqlgen/graphql.ID
-      - github.com/99designs/gqlgen/graphql.Int
-      - github.com/99designs/gqlgen/graphql.Int64
-      - github.com/99designs/gqlgen/graphql.Int32
+      #- github.com/99designs/gqlgen/graphql.Int
+      #- github.com/99designs/gqlgen/graphql.Int64
+      #- github.com/99designs/gqlgen/graphql.Int32
   Int:
     model:
-      - github.com/99designs/gqlgen/graphql.Int
+      #- github.com/99designs/gqlgen/graphql.Int
       - github.com/99designs/gqlgen/graphql.Int64
-      - github.com/99designs/gqlgen/graphql.Int32
+      #- github.com/99designs/gqlgen/graphql.Int32
+
