--- a/frontend/EduAndTime/package.json
+++ b/frontend/EduAndTime/package.json
@@ -10,19 +10,23 @@
   },
   "devDependencies": {
     "@types/node": "^22.7.9",
-    "@types/vue": "^1.0.31",
     "@vitejs/plugin-vue": "^5.1.4",
+    "@vitejs/plugin-vue-jsx": "^4.1.0",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "typescript": "~5.6.2",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.7.2",
     "vite": "^5.4.10",
-    "vue": "^3.5.12",
+    "vue": "^3.5.13",
     "vue-tsc": "^2.1.6"
   },
   "dependencies": {
+    "@xmldom/xmldom": "^0.9.5",
     "axios": "^1.7.7",
-    "vue-router": "^4.4.5",
-    "vue-toastification": "^2.0.0-rc.5"
+    "epubjs": "^0.3.93",
+    "pdfjs-dist": "^4.8.69",
+    "vue-router": "^4.0.13",
+    "vue-toastification": "^2.0.0-rc.5",
+    "vuex": "^4.0.2"
   }
 }
