--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,7 @@ services:
       - "8080:8080"
     volumes:
       - ./backend/auth:/app
+      - ./frontend/EduAndTime/public/imagenesPerfil:/imagenesPerfil
     depends_on:
       - mariadb
       - couchbase
@@ -61,6 +62,7 @@ services:
       - "8081:8081"
     volumes:
       - ./backend/library:/app
+      - ./frontend/EduAndTime/public/recursos:/recursos
     depends_on:
       - mariadb
       - couchbase
